fix dialog wrap

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1256,6 +1256,7 @@ i.icon-verified {
 
   .im_dialog_wrap {
     margin-top: 0;
+    margin-right: 5px;
   }
 
   a.im_dialog {
